--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -24,53 +24,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "id": "8090c708-0a51-4f91-a2fb-040a4a88f2d5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "driver = webdriver.Chrome(\"C:/Development/chromedriver.exe\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "f5fecdfb-75e6-461b-881a-b9313c6bf2ec",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-31-357802577fa9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[0msuccess\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_element_by_xpath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'//a[contains(text(),\"knew\")]'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[0msuccess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclick\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m     \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "driver = webdriver.Chrome(\"C:/Development/chromedriver.exe\")\n",
     "driver.get(url)\n",
     "\n",
     "\n",
-    "element = driver.find_element_by_xpath('//a[contains(text(),\"Practice this deck\")]')\n",
-    "element.click()\n",
+    "links = driver.find_elements_by_xpath('//a[contains(text(),\"Practice this deck\")]')\n",
     "\n",
     "word_to_definition = {}\n",
-    "for _ in range(51):\n",
-    "    next_card = driver.find_element_by_xpath('//a[starts-with(text(),\"Click\")]')\n",
-    "    next_card.click()\n",
-    "    time.sleep(1)\n",
-    "    word = driver.find_element_by_xpath('//h3[@class=\"flashcard-word\"]').text\n",
-    "    definition = driver.find_element_by_xpath('//div[@class=\"flashcard-text\"]').text\n",
-    "    s = definition.split(':')\n",
-    "    word_definition = s[1].strip()\n",
-    "    word_type = s[0].strip()\n",
-    "    word_to_definition[word] = {'definition': word_definition,'type': word_type}\n",
-    "    success = driver.find_element_by_xpath('//a[contains(text(),\"knew\")]')\n",
-    "    success.click()\n",
-    "    time.sleep(2)\n",
+    "\n",
+    "for link in links:\n",
+    "    driver.execute_script(f\"window.open('{element.get_attribute('href')}', 'new_window')\")\n",
+    "    driver.switch_to.window(driver.window_handles[1])\n",
+    "\n",
+    "    #element.click()\n",
+    "\n",
+    "    for _ in range(10):\n",
+    "        next_card = driver.find_element_by_xpath('//a[starts-with(text(),\"Click\")]')\n",
+    "        next_card.click()\n",
+    "        time.sleep(1)\n",
+    "        word = driver.find_element_by_xpath('//h3[@class=\"flashcard-word\"]').text\n",
+    "        definition = driver.find_element_by_xpath('//div[@class=\"flashcard-text\"]').text\n",
+    "        s = definition.split(':')\n",
+    "        word_definition = s[1].strip()\n",
+    "        word_type = s[0].strip()\n",
+    "        word_to_definition[word] = {'definition': word_definition,'type': word_type}\n",
+    "        success = driver.find_element_by_xpath('//a[contains(text(),\"knew\")]')\n",
+    "        success.click()\n",
+    "        time.sleep(2)\n",
+    "    driver.close()\n",
+    "\n",
+    "    driver.switch_to.window(driver.window_handles[0])\n",
     "\n",
     "\n",
     "\n"
